--- a/1-components/1-components/src/app/course-card/course-card.component.html
+++ b/1-components/1-components/src/app/course-card/course-card.component.html
@@ -1,7 +1,7 @@
 <div class="course-card" *ngIf="course"
 [ngClass] = "cardClasses()">
 
-    <div class="course-title" >
+    <div class="course-title">
         {{ cardIndex + '. ' + course.description }}
     </div>
     <img width="300" alt="Angular Logo" 
@@ -15,6 +15,14 @@
     </ng-template>
     <div class="course-description">
        {{course.longDescription}}
+    </div>
+
+    <div class="course-category" [ngSwitch]="course.category">
+        <div class="category" *ngSwitchCase="'BEGINNER'">Begineer</div>
+        <div class="category" *ngSwitchCase="'INTERMEDIATE'">Intermediate</div>
+        <div class="category" *ngSwitchCase="'ADVANCED'">Advance</div>
+        <div class="category" *ngSwitchDefault>All level</div>
+
     </div>
 
     <button (click)="onCourseViewed()">View Course</button>
