--- a/1-components/1-components/src/app/app.component.html
+++ b/1-components/1-components/src/app/app.component.html
@@ -5,9 +5,31 @@
 
 </div>
 
+<div class="demo">
+
+    <div>Start Date :- {{startDate | date : 'MMM/dd/yyyy'}}</div>
+
+    <div>{{title |lowercase}}</div>
+
+    <div>{{price | number : '3.3-5'}}</div>
+
+    <div>{{price | currency :'INR'}}</div>
+
+    <div>{{rate | percent}}</div>
+
+</div>
+
+<div *ngFor="let pair of course | keyvalue">
+
+    {{pair.key+' : '+pair.value}}
+
+</div>
+
+<!-- {{courses | json}} -->
+
 <div class="courses">
 
-    <course-card *ngFor="let course of courses; index as i; "
+    <course-card *ngFor="let course of courses | slice:0:2 ; index as i; "
      (courseSelected)="onCourseSelected($event)"
      [course] = "course" [cardIndex]="i + 1"></course-card>
 
