--- a/1-components/1-components/src/app/app.component.html
+++ b/1-components/1-components/src/app/app.component.html
@@ -5,7 +5,22 @@
 
 </div>
 
-<div class="demo">
+<div class="courses" #container>
+
+    <course-card #cardRef1
+     (courseSelected)="onCourseSelected($event)"
+     [course] = "courses[0]">
+    </course-card>
+
+    <course-card #cardRef2
+     (courseSelected)="onCourseSelected($event)"
+     [course] = "courses[1]">
+    </course-card>
+
+
+</div>
+
+<!-- <div class="demo">
 
     <div>Start Date :- {{startDate | date : 'MMM/dd/yyyy'}}</div>
 
@@ -23,16 +38,10 @@
 
     {{pair.key+' : '+pair.value}}
 
-</div>
+</div> -->
 
 <!-- {{courses | json}} -->
 
-<div class="courses">
 
-    <course-card *ngFor="let course of courses | slice:0:2 ; index as i; "
-     (courseSelected)="onCourseSelected($event)"
-     [course] = "course" [cardIndex]="i + 1"></course-card>
-
-</div>
 
 
