--- a/1-components/1-components/src/app/course-card/course-card.component.html
+++ b/1-components/1-components/src/app/course-card/course-card.component.html
@@ -1,45 +1,32 @@
-<ng-container *ngIf="course">
+<div class="course-card" *ngIf="course">
 
-    <div class="course-card" 
-    [ngClass] = "cardClasses()">
-    
-        <div class="course-title">
-            {{ cardIndex + '. ' + course.description }}
-        </div>
-        <img width="300" alt="Angular Logo" 
-        *ngIf ="isImageVisible(); else noImage"
-             [src]="course.iconUrl">
-    
-        <ng-template #noImage>
-    
-            <p>No Image is available. </p>
-    
-        </ng-template>
-        <div class="course-description">
-           {{course.longDescription}}
-        </div>
-
-        <ng-container [ngSwitch]="course.category">
-            <div class="course-category" >
-
-                <ng-container *ngSwitchCase="'BEGINNER'">
-                    <div class="category">Begineer</div>
-                </ng-container>
-
-                <div class="category" *ngSwitchCase="'INTERMEDIATE'">Intermediate</div>
-
-                <div class="category" *ngSwitchCase="'ADVANCED'">Advance</div>
-                
-                <div class="category" *ngSwitchDefault>All level</div>
-        
-            </div>
-
-        </ng-container>
-    
-        
-    
-        <button (click)="onCourseViewed()">View Course</button>
-    
+    <div class="course-title">
+        {{ cardIndex || '' + ' ' + course.description }}
     </div>
-</ng-container>
+    <img width="300" alt="Angular Logo" 
+        *ngIf ="isImageVisible(); else noImage"
+        [src]="course.iconUrl">
+    
+    <ng-template #noImage>
+    
+        <p>No Image is available. </p>
+    
+    </ng-template>
+    <div class="course-description">
+        {{course.longDescription}}
+    </div>
+
+    <div class="course-category" [ngSwitch]="course.category" >
+
+        <div class="category" *ngSwitchCase="'BEGINNER'">Begineer</div>
+
+        <div class="category" *ngSwitchCase="'INTERMEDIATE'">Intermediate</div>
+
+        <div class="category" *ngSwitchCase="'ADVANCED'">Advance</div>
+        
+    </div>
+
+    <button (click)="onCourseViewed()">View Course</button>
+    
+</div>
 
