AFter_view_init_Lifecycle

--- a/1-components/1-components/src/app/app.component.html
+++ b/1-components/1-components/src/app/app.component.html
@@ -12,10 +12,10 @@
      [course] = "courses[0]">
     </course-card>
 
-    <course-card #cardRef2
+    <!-- <course-card #cardRef2
      (courseSelected)="onCourseSelected($event)"
      [course] = "courses[1]">
-    </course-card>
+    </course-card> -->
 
 
 </div>
