--- a/1-components/1-components/src/app/course-card/course-card.component.html
+++ b/1-components/1-components/src/app/course-card/course-card.component.html
@@ -3,7 +3,7 @@
     <div class="course-title">
         {{ cardIndex || '' + ' ' + course.description }}
     </div>
-    <img width="300" alt="Angular Logo" 
+    <img #courseImage width="300" alt="Angular Logo" 
         *ngIf ="isImageVisible(); else noImage"
         [src]="course.iconUrl">
     
